@@ -338,3 +338,4 @@ void KKEditClass::checkDoc(DocumentClass *doc)
 
 
 
+
